deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: kush233/draw-frontend:c46dfbc978929d887f47e09d38eaa516f511b1a7
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
